tools/data-handler/test/test-data/invalid/no-.schema-in-.cards-templates-subfolder/.cards/local/fieldTypes/.schema
{
    "id": "field-type-schema",
    "version": 1
}
